--- a/Common/app/build.gradle
+++ b/Common/app/build.gradle
@@ -35,6 +35,9 @@ android {
     }
 }
 
+
+
+
 dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
@@ -48,4 +51,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
