--- a/Common/app/src/main/AndroidManifest.xml
+++ b/Common/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Common">
         <activity
+            android:name=".Splash"
+            android:exported="false" />
+        <activity
+            android:name=".QuizList"
+            android:exported="false" />
+        <activity
             android:name=".Playlist"
             android:exported="false" />
         <activity
