채팅 리사이클러뷰

--- a/Common/app/src/main/AndroidManifest.xml
+++ b/Common/app/src/main/AndroidManifest.xml
@@ -10,8 +10,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Common">
         <activity
-            android:name=".Splash"
+            android:name=".Chatting"
             android:exported="false" />
+        <activity
+            android:name=".Splash"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".QuizList"
             android:exported="false" />
@@ -20,13 +29,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
