--- a/Common/app/src/main/AndroidManifest.xml
+++ b/Common/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Common">
         <activity
+            android:name=".GenerationTest"
+            android:exported="false" />
+        <activity
             android:name=".Quiz"
             android:exported="false" />
         <activity
